# Glushkov-algo

./: .gitignore  README.md  glushkov-algo.cabal
app/: Main.hs
examples/: README.md
report/: report.tex
scripts/: render-regex.sh
src/Automata/: DFA.hs  Glushkov.hs
src/Regex/: Linearize.hs  Parser.hs  Syntax.hs
src/Render/: Tikz.hs
test/: Main.hs
