cabal-version:      3.0
name:               glushkov-algo
version:            0.1.0.0
synopsis:           Build a Glushkov automaton from a regular expression
description:        Coursework scaffold for parsing regular expressions,
                    constructing a DFA with Glushkov's algorithm, and
                    rendering the result as LaTeX/TikZ.
license:            MIT
author:             Coursework project
maintainer:         coursework@example.invalid
build-type:         Simple

library
  exposed-modules:
      Automata.DFA
      Automata.Glushkov
      Regex.Linearize
      Regex.Parser
      Regex.Syntax
      Render.Tikz
  hs-source-dirs:   src
  build-depends:
      base >=4.14 && <5
    , containers
    , parsec
  default-language: Haskell2010

executable glushkov-algo
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base >=4.14 && <5
    , containers
    , glushkov-algo
    , parsec
  default-language: Haskell2010

test-suite parser-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base >=4.14 && <5
    , containers
    , glushkov-algo
    , parsec
  default-language: Haskell2010
